src/app/views/setup/setup.component.scss
.mg_50 {
    margin-top: 50px;
}

.select_body {
    text-align: center;
}

.title {
    color: #ffffff;
    margin: 0;
    padding: 0 20px;
    font-size: 30px;
    font-weight: bold;
    // text-decoration: underline #41faff;
    margin-top: 15px;
    // text-shadow: 0 0 0.5em #41faff, 0 0 0.5em #41faff;
}

.disabled {
    background: #48b822;
    opacity: 0.5;
}

.home_body {
    margin-left: 0px;
    padding: 0px;
    .main_btn {
        background: #4DB821;
        color: #fff;
        border-bottom-right-radius: 25px;
        border-bottom-left-radius: 0px;
        border-top-right-radius: 0px;
        border-top-left-radius: 0px;
        font-weight: bold;
        font-size: 14px;
        padding: 15px 10px;
        margin-right: 15px;
        margin-top: -11px;
        width: 175px;
        border: 1px solid #5d585861;
        outline: none;
    }
    .main_btn:active {
        background: repeating-linear-gradient(152deg, #f9f906bf, #41faffcc);
    }
}

.common_input {
    border-radius: 28px;
    background: #eeeeee75;
    padding: 0px 10px;
    border: 2px solid #4DB821;
    outline: none;
    color: #fff;
    font-size: 14px;
    font-weight: bold;
    letter-spacing: 0.5px;
    height: 40px;
    margin-bottom: 0px;
    box-shadow: 1px 4px #00000017;
    width: 100%;
}

.select_option {
    width: 250px;
}

.pad_left40 {
    padding-left: 40px;
}

.common_label {
    font-size: 14px;
    font-weight: bold;
    color: #41faff;
    letter-spacing: 0.7px;
    margin-bottom: 0px;
    text-align: left;
    padding-bottom: 5px;
    width: auto;
    // text-shadow: 0 0 0.5em #41faff, 0 0 0.5em #41faff;
}

.dropdown-toggle::after {
    display: none;
}

.dropdown {
    .dropdown-menu.show {
        width: 100%;
        font-weight: bold;
        border-radius: 15px;
        background: #ffffff;
        .dropdown-item {
            padding: .35rem 1rem;
            font-size: 14px;
            font-weight: bold;
            outline: none;
            .roundDropDown {
                padding-right: 69%;
                padding-top: 2%;
                padding-bottom: 3%;
            }
        }
        .dropdown-item:focus {
            color: #000 !important;
            text-decoration: none;
            background-color: #b4f5ee5c !important;
        }
        .dropdown-item:hover {
            color: #000 !important;
            text-decoration: none;
            background-color: #b4f5ee5c !important;
        }
    }
    .dropdown-toggle {
        width: 321px;
        text-align: left;
        .section_text {
            margin-bottom: 0;
            padding-top: 4px;
        }
        .drop_down_icon {
            float: right;
            width: 30px;
            margin-top: -25px;
        }
        .down_icon {
            // filter: progid: DXImageTransform.Microsoft.BasicImage(rotation=0.5);
            -webkit-transform: rotate(90deg);
            -moz-transform: rotate(90deg);
            -ms-transform: rotate(90deg);
            -o-transform: rotate(90deg);
            transform: rotate(90deg);
            display: inline-block;
            /* background: #fff; */
            border-radius: 50%;
            height: 20px;
            width: 15px;
            margin: 0;
            padding-right: 10px;
            font-size: 18px;
            color: #4DB821;
            margin-left: 23px;
            float: right;
            margin-top: -22px;
        }
    }
}

.second_body {
    padding: 10px 40px;
    margin-bottom: 15px;
    background: radial-gradient(#00000029, #ffffff38);
    border-radius: 10px;
    margin-top: 20px;
}

.question_txt {
    padding: 0 10px;
}

.common_textarea {
    height: 100px;
    border-radius: 15px;
    width: 100%;
    margin-bottom: 0px;
    resize: none;
}

.w_100 {
    width: 100%;
}

.w_321 {
    width: 321px;
}

.btn_question {
    float: right;
    margin: 0px 12px 12px;
}

.btn_question:active {
    color: #013ad6 !important;
}

.pad_b50 {
    padding-bottom: 50px;
}

.table_body {
    border-top-left-radius: 10px;
    border: 2px solid #4DB821;
    padding: 0;
    border-bottom: none;
    border-top-right-radius: 10px;
    // height: 100px;
    // overflow: auto;
    .table {
        margin-bottom: 0;
        thead {
            tr {
                border-bottom: 2px solid #4DB821;
                th,
                td {
                    border: none;
                    padding: 10px 10px !important;
                }
            }
        }
        tbody {
            tr {
                border-bottom: 2px solid #4DB821;
                .common_data {
                    padding-top: 10px !important;
                    color: #fff;
                    font-size: 13px;
                    font-weight: bold;
                }
                th {
                    border: none;
                }
                td {
                    border: none;
                    padding: 5px !important;
                    padding-left: 12px !important;
                }
            }
        }
    }
}

.act_width {
    width: 230px;
    text-align: center;
}

.btn_table {
    width: 90px;
    border-top-right-radius: 17px !important;
    border-bottom-left-radius: 17px !important;
    background: repeating-linear-gradient(152deg, #f9f906bf, #41faffcc);
    border: none;
    height: 30px;
    padding: 3px;
    outline: none;
    font-weight: bold;
    letter-spacing: 0.5px;
    cursor: pointer;
    border: 1px solid #4DB821;
    margin-right: 10px;
    color: #013ad6;
}

.btn_table:active {
    color: #013ad6 !important;
}

.btn_box {
    width: 100px;
    border-top-right-radius: 17px !important;
    border-bottom-left-radius: 17px !important;
    padding: 10px;
    margin-top: 10px;
    background: #000;
    border: none;
    background: repeating-linear-gradient(152deg, #f9f906bf, #41faffcc);
    margin-left: 10px !important;
    font-weight: bold;
    letter-spacing: 0.5px;
    cursor: pointer;
    border: 1px solid #4DB821;
    outline: none;
    color: #013ad6;
}

.btn_box:active {
    color: #013ad6 !important;
}

.mg_l10 {
    margin-left: 10px !important;
}

.pad_0 {
    padding: 0px;
}

.btn-primary:not(:disabled):not(.disabled).active,
.btn-primary:not(:disabled):not(.disabled):active,
.show>.btn-primary.dropdown-toggle {
    color: #fff;
    background-color: #4DB821;
    border-color: #4DB821;
    outline: none !important;
}

.btn:focus {
    box-shadow: none !important;
    outline: none !important;
}

.save_btn {
    color: #fff;
    border-bottom-right-radius: 0px;
    border-bottom-left-radius: 25px;
    border-top-right-radius: 0px;
    border-top-left-radius: 25px;
    font-weight: bold;
    font-size: 15px;
    padding: 13px 20px;
    /* width: 175px; */
    border: 2px solid #48B822;
    border-right: 0;
    background: #0138d5;
    cursor: pointer;
    float: right;
    margin-top: 85px;
    outline: none;
    text-align: -webkit-match-parent;
    padding-right: 10px;
    // height: 127px;
}

.save_btn:hover {
    background: #48B822;
}

.remove_icon {
    float: right;
    color: #db4640;
    font-size: 16px;
}

.add_icon {
    float: right;
    color: #48B822;
    font-size: 16px;
}

.save_icon {
    float: right;
    font-size: 25px;
}

.exchange_wrapper {
    text-align: center;
}

.exchange_icon {
    width: 25px;
    margin-top: 33px;
}

.exchange_icon:hover {
    border: 2px solid #4DB821;
    border-radius: 30%;
    width: 25%;
}

.btn_wrapper {
    padding: 0px;
}

.bg_img {
    height: 100%;
    margin-left: 0px;
    background: url("../../../assets/images/control_bg.png") no-repeat;
    -webkit-background-size: cover;
    /* pour anciens Chrome et Safari */
    background-size: cover;
    padding: 0px;
    border: 2px solid #48B822;
    border-radius: 5px;
}

.modal-header {
    color: #fff !important;
    background: #48B822 !important;
    padding: 10px 1rem !important;
    border: none !important;
    border: none;
    h4 {
        font-size: 20px !important;
    }
    button {
        outline: none !important;
    }
}

.modal-body {
    text-align: center !important;
    color: #fff !important;
    padding-top: 4em !important;
    label {
        font-weight: bold !important;
        letter-spacing: 0.5px !important;
    }
}

.modal-footer {
    border: none;
    .btn-add {
        width: 100px !important;
        border-top-right-radius: 17px !important;
        border-bottom-left-radius: 17px !important;
        padding: 10px !important;
        margin-top: 10px !important;
        background: #000 !important;
        border: none !important;
        background: repeating-linear-gradient(152deg, #f9f906bf, #41faffcc) !important;
        margin-left: 10px !important;
        font-weight: bold !important;
        letter-spacing: 0.5px !important;
        cursor: pointer !important;
        border: 1px solid #4DB821 !important;
        outline: none !important;
        color: #013ad6;
    }
    .saveBack {
        width: 133px !important;
    }
    .btn-add:active {
        color: #013ad6;
        background-color: #4DB821;
        border-color: #4DB821;
        outline: none !important;
    }
    .btn-add:hover {
        background: #4DB821 !important;
    }
    .btn-add:disabled {
        opacity: .65;
        background: repeating-linear-gradient(152deg, #f9f906bf, #41faffcc) !important;
    }
}

.error_msg {
    background: radial-gradient(#00000029, #ffffff38);
    padding: 2px;
    border-radius: 5px;
    color: red;
}

.button:hover {
    background: #4DB821;
}

.btn-primary.disabled,
.btn-primary:disabled {
    width: 100px;
    border-top-right-radius: 17px !important;
    border-bottom-left-radius: 17px !important;
    padding: 10px;
    margin-top: 10px;
    background: #000;
    border: none;
    background: repeating-linear-gradient(24deg, #41faff80, #f9f9067d);
    margin-left: 10px !important;
    font-weight: bold;
    letter-spacing: 0.5px;
    cursor: pointer;
    border: 1px solid #4DB821;
    outline: none;
    opacity: .65;
}
.p010{
    padding: 0 10px;
}
.pl40{
    padding-left: 40px;
}
//Round Four
.alpha_text{
color: #fff;
width: 75px;
text-align: center;
height: 40px !important;
padding: 5px;

}
.option_text{
    vertical-align: -2px;
    margin-left: 10px;
    color: #fff;
    margin-right: 30px;
}

// .mt10{
//     margin-top: 10px;
// }

